# pl-ci-cd

./: README.md  pyproject.toml  release.sh
.ship/: deploy  test
src/pl_ci_cd/: __init__.py  _check.py  _check_format.py  _check_types.py  _constants.py  _initialize_uv_project.py  _lint.py  _run_unit_tests_and_coverage.py  bump_package_version_patch.py  check_format.py  commit.py  initialize_uv_project.py  make_file_executble.py  merge.py  package_version.py  publish_to_pypi.py  ship.py
src/pl_ci_cd/testing/: __init__.py  _set_up.py
tests/: bump_package_version_patch_test.py  check_format_test.py  check_test.py  check_types_test.py  commit_test.py  conftest.py  constants.py  initialize_uv_project_test.py  lint_test.py  make_file_executble_test.py  merge_test.py  package_version_test.py  passing_test.py  publish_to_pypi_test.py  run_unit_tests_and_coverage_test.py  ship_test.py
